@@ -12,6 +12,7 @@
 + KGySoft.Drawing.ImagingTools.exe
 ==================================
 + Targeting also .NET 5.0
+- Fixing possible errors when closing forms while an async operation is still in progress.
 * API changes:
   * Members are annotated for using C# 8.0 nullable references
 
